# text-finder

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  authors.html  index.html  pkgdown.yml  run.sh
.cargo/: config
.github/workflows/: textfinder.yml
apps/textfinder/: Cargo.toml
apps/textfinder/src/: textfinder.rs
cliparser/: Cargo.toml
cliparser/examples/: cli_parser_example_app.rs
cliparser/src/: cli_parser.rs
dirnav/: Cargo.toml
dirnav/examples/: dir_nav_example_app.rs
dirnav/src/: DirNav.rs
display/: Cargo.toml
display/examples/: display_example_app.rs
reference/: index.html
src/cliparser/: Cargo.toml
src/cliparser/examples/: cli_parser_example_app.rs
src/cliparser/src/: cli_parser.rs
src/dirnav/: Cargo.toml
src/dirnav/examples/: dir_nav_example_app.rs
src/dirnav/src/: dir_nav.rs
src/display/: Cargo.toml
src/display/src/: display.rs
src/executive/: Cargo.toml
src/executive/examples/: executive_example_app.rs
src/executive/src/: executive.rs
src/textsearch/: Cargo.toml
src/textsearch/examples/: text_search_example_app.rs
src/textsearch/src/: text_search.rs
textsearch/: Cargo.toml
textsearch/src/: text_search.rs
