[package]
name = "display"
version = "0.1.0"
edition = "2018"
authors = ["Ragu Manjegowda <raghavendrahm0410@gmail.com>"]

[lib]
name = "display"           # The name of the target.
path = "src/display.rs"    # The source file of the target.

[dependencies]
textsearch = { git = "https://github.com/ragu-manjegowda/text-finder" }
