[package]
name = "textsearch"
version = "0.1.0"
edition = "2018"
authors = ["Ragu Manjegowda <raghavendrahm0410@gmail.com>"]

[lib]
name = "text_search"           # The name of the target.
path = "src/text_search.rs"    # The source file of the target.

[dependencies]
dirnav = { path = "../dirnav", version = "0.1.0" }
