[package]
name = "textfinder"
version = "0.1.0"
edition = "2018"
authors = ["Ragu Manjegowda <raghavendrahm0410@gmail.com>"]

[[bin]]
name = "textfinder"           # The name of the target.
path = "src/textfinder.rs"    # The source file of the target.
doctest = false            # disable doctest

[dependencies]
executive = { git = "https://github.com/ragu-manjegowda/text-finder" }
